# arweave-search

./: .gitignore  Cargo.toml  README.md  config.json  spin.toml
.spin/logs/: service_stderr.txt  service_stdout.txt
api/: Cargo.toml
frontend/pages/: SearchResults.jsx
frontend/src/: App.js
scrapper/: Cargo.toml
scrapper/src/: lib.rs  oldLib.rs
scrapper/src/Cors/: cors.rs  mod.rs
scrapper/src/Mimetypes/: mimetypes.rs  mod.rs
scrapper/src/Models/: models.rs
scrapper/src/Requests/: mod.rs  requests.rs
