[package]
name = "scrapper"
authors = ["rxn <coppiemertz@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
# phf = { version = "0.11.2" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
serde_json = "1.0.103"
# tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1"}
base64 = "0.21.2"
# spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[lib]
crate-type = [ "cdylib" ]

